Not working. Adding user input to choose day number. Does use day number to find the lesson of words.

--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
     <img src="./resources/images/EPYouTubeBanner2-01.jpg" / />
       </div>
     </header>
+
+
   <div class=directions id="start">
     <p>
       Read the word. If you don't know it, click on it to hear it. Then say the word out loud and click on the X. If you can say the word before you click on it, click on the check mark. Click to begin. I'M READY!
     </p>
-  </div>
+  </div> <!--closes directions-->
+
   <div class=directions id="endScreen">
     <p>
       Great Job. Take a break and then come back and read some more.
     </p>
-  </div>
+  </div> <!--closes endscreen-->
+
   <div class="column">
   <div id='page'></div>
   <div class="check">
