Fix word order on 5 and 8 and wait++

--- a/index.html
+++ b/index.html
@@ -260,16 +260,13 @@
           The cat and the rat ran.
           </br>
           </br>
-          Anna sat, and Dan ran.
+          Anna ran, and Dan sat.
         </br>
         </br>
           A rat ran at Dan.
         </br>
         </br>
-          Can Anna fan the lad?
-        </br>
-        </br>
-          The man and the lad.
+          Can Anna fan the man and the lad?
         </br>
         </br>
           The man has a cap.
