Add through lesson 30.

--- a/index.html
+++ b/index.html
@@ -693,6 +693,28 @@
         </div>
 
 <div class="stories" id="story23">
+          <h3>
+            Lesson 23
+          </h3>
+        <img src="./resources/images/lesson23.jpg" />
+        <p>
+        The sun will soon set.
+        <br />
+        <br />
+        The cows are on their way to the barn.
+        <br />
+        <br />
+        One old cow has a bell on her neck.
+        <br />
+        <br />
+        She sees our dog, but she will not run.
+        <br />
+        <br />
+        Our dog is kind to the cows.
+        </p>
+        <button class="readToMe">Read to Me</button>
+        <button class="readIt">I Read It!</button>
+      </div>
 
 <div class="stories" id="story24">
                     <h3>
@@ -740,6 +762,132 @@
                       <button class="readToMe">Read to Me</button>
                       <button class="readIt">I Read It!</button>
                     </div>
+
+<div class="stories" id="story26">
+                              <h3>
+                                Lesson 26
+                              </h3>
+                            <img src="./resources/images/lesson26.jpg" />
+                            <p>
+                              The boys are on the ice with their skates.
+                              <br />
+                              <br />
+                              There is a stone on the ice.
+                              <br />
+                              <br />
+                              One boy did not see it and has had a fall.
+                              <br />
+                              <br />
+                              But he is a brave boy and will not cry.
+                            </p>
+                            <button class="readToMe">Read to Me</button>
+                            <button class="readIt">I Read It!</button>
+                          </div>
+
+<div class="stories" id="story27">
+                          <h3>
+                            Lesson 27
+                          </h3>
+                          <img src="./resources/images/lesson27.jpg" />
+                         <p>
+                           Look! There are John and Sue by the pond.
+                           <br />
+                           <br />
+                           They like to go there and see the big, round wheel on the mill.
+                           <br />
+                           <br />
+                           They have come to play on the logs and in the boat.
+                           <br />
+                           <br />
+                           John and Sue will play here all day.
+                           </p>
+                          <button class="readToMe">Read to Me</button>
+                          <button class="readIt">I Read It!</button>
+                         </div>
+
+<div class="stories" id="story28">
+                         <h3>
+                           Lesson 28
+                         </h3>
+                         <img src="./resources/images/lesson28.jpg" />
+                        <p>
+                          Here are some girls with skates,
+                          <br />
+                          <br />
+                          but they are not on the ice.
+                          <br />
+                          <br />
+                          Their skates roll on the floor.
+                          <br />
+                          <br />
+                          Which way do you like to skate –
+                          <br />
+                          <br />
+                          on the ice, or on the floor?
+                          <br />
+                          <br />
+                          The girl with the new black
+                          <br />
+                          <br />
+                          dress is Jane Bell.
+                          </p>
+                         <button class="readToMe">Read to Me</button>
+                         <button class="readIt">I Read It!</button>
+                        </div>
+
+<div class="stories" id="story29">
+                        <h3>
+                          Lesson 29
+                        </h3>
+                        <img src="./resources/images/lesson29.jpg" />
+                       <p>
+                         Look out for the train cars!
+                         <br />
+                         <br />
+                         Look how fast they go!
+                         <br />
+                         <br />
+                         No horse can be as fast as the train.
+                         <br />
+                         <br />
+                         I will not try to catch the train cars. I would fall and get hurt.
+                         <br />
+                         <br />
+                         See the horse look at the train?
+                         <br />
+                         <br />
+                         Will he run?
+                         </p>
+                        <button class="readToMe">Read to Me</button>
+                        <button class="readIt">I Read It!</button>
+                       </div>
+
+<div class="stories" id="story30">
+                       <h3>
+                         Lesson 30
+                       </h3>
+                       <img src="./resources/images/lesson30.jpg" />
+                      <p>
+                        There is ice on the pond, so the mill wheel cannot go round.
+                        <br />
+                        <br />
+                        The boys are all out on the ice with their skates.
+                        <br />
+                        <br />
+                        I will let you and Tom try to skate, but do not fall, or you will get hurt.
+                        <br />
+                        <br />
+                        The girls are not on the pond; but some of them have skates which roll on the floor.
+                        <br />
+                        <br />
+                        Look! Here come the train cars.
+                        <br />
+                        <br />
+                        John and Dan try to skate as fast as the train cars go, but they cannot, and John has had a fall.
+                       </p>
+                       <button class="readToMe">Read to Me</button>
+                       <button class="readIt">I Read It!</button>
+                      </div>
 
 <!--end of stories-->
 
