--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
 <div class=directions>
       <p>
-        Choose your lesson from the lesson list. Click on the Lesson List button any time to get the list. It will show you which lessons you've clicked on. If you know the word, say it out loud. Then click on it to hear it. When you know all the words, click on the Read the Story button.
+        Choose your lesson from the lesson list. Click on the Lesson List button any time to get the list. It will show you which lessons you've clicked on. If you know the word, say it out loud. Then click on the word to hear it. When you know all the words, click on the Read the Story button.
       </p>
        </br>
       <p>
-        The lesson shows each word one time and then randomly shows the words. That means sometimes the same word will show up again. After a set number of times based on the number of words, a check mark will appear and you can end that part of the exercise if you are ready. It will then show the words beginning with a capital letter and will talk about each word, often using it in a sentence for clarity.
+        The lesson shows each word one time and then shows the words randomly. That means sometimes the same word will show up again. After a set number of times based on the number of words in the lesson, a check mark will appear and you can end that part of the exercise if you are ready. It will then show the words beginning with a capital letter and will talk about each word, often using it in a sentence for clarity. Before attempting the story, it is useful to practice the words a few times throughout the day. Having a routine such as looking at the words at breakfast, lunch, and dinner will help form a good habit for learning the words.
        </p>
      </br>
       <p>
-        I have made some slight edits to the McGuffey Primer, mostly to modernize it, just a little. Instead of liking to watch the boys at play, the girls like to play too! Several names have changed as well. The name Ann changed to Anna, not to modernize it, but just because it's hard for little ones to say and hear the difference between Ann and "and" which both appear in just the second lesson.
+        I have made some slight edits to the McGuffey Primer, mostly to modernize it, just a little. Instead of liking to watch the boys at play, the girls like to play too! Several names have changed as well. The name Ann changed to Anna, not to modernize it, but just because it's hard for little ones to say and hear the difference between "and" and Ann.
        </p>
        </br>
       <p>
@@ -887,6 +887,107 @@
                        <button class="readToMe">Read to Me</button>
                        <button class="readIt">I Read It!</button>
                       </div>
+
+<div class="stories" id="story31">
+  <h3>
+    Lesson 31
+  </h3>
+  <img src="./resources/images/lesson31.jpg" />
+ <p>
+   Ned and John are hard at work. John has a saw, and Ned has an ax. They will try to cut all of the wood which you see in the pile.
+   <br />
+   <br />
+   Do you think they can do this in one day?
+
+   A rat and a cat.
+   </p>
+  <button class="readToMe">Read to Me</button>
+  <button class="readIt">I Read It!</button>
+</div>
+
+<div class="stories" id="story32">
+  <h3>
+    Lesson 1
+  </h3>
+  <img src="./resources/images/lesson1.jpg" />
+ <p class="phrases">
+   <span>a rat</span>
+   <span>a cat</span>
+   <span>A cat</span>
+   <span>A rat</span>
+ </p>
+ <p>
+   A cat and a rat.
+   <br />
+   <br />
+   A rat and a cat.
+   </p>
+  <button class="readToMe">Read to Me</button>
+  <button class="readIt">I Read It!</button>
+</div>
+
+<div class="stories" id="story33">
+  <h3>
+    Lesson 1
+  </h3>
+  <img src="./resources/images/lesson1.jpg" />
+ <p class="phrases">
+   <span>a rat</span>
+   <span>a cat</span>
+   <span>A cat</span>
+   <span>A rat</span>
+ </p>
+ <p>
+   A cat and a rat.
+   <br />
+   <br />
+   A rat and a cat.
+   </p>
+  <button class="readToMe">Read to Me</button>
+  <button class="readIt">I Read It!</button>
+</div>
+
+<div class="stories" id="story34">
+  <h3>
+    Lesson 1
+  </h3>
+  <img src="./resources/images/lesson1.jpg" />
+ <p class="phrases">
+   <span>a rat</span>
+   <span>a cat</span>
+   <span>A cat</span>
+   <span>A rat</span>
+ </p>
+ <p>
+   A cat and a rat.
+   <br />
+   <br />
+   A rat and a cat.
+   </p>
+  <button class="readToMe">Read to Me</button>
+  <button class="readIt">I Read It!</button>
+</div>
+
+<div class="stories" id="story35">
+  <h3>
+    Lesson 1
+  </h3>
+  <img src="./resources/images/lesson1.jpg" />
+  <p class="phrases">
+   <span>a rat</span>
+   <span>a cat</span>
+   <span>A cat</span>
+   <span>A rat</span>
+  </p>
+  <p>
+   A cat and a rat.
+   <br />
+   <br />
+   A rat and a cat.
+   </p>
+  <button class="readToMe">Read to Me</button>
+  <button class="readIt">I Read It!</button>
+</div>
 
 <!--end of stories-->
 
