Add variable resets. Add Sue to story 25.

--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                       Come, boys, and feed the cows. The sun has set, and they are in the barn.
                       <br />
                       <br />
-                      One hot day Anna and Emma sat on the grass in the shade of a big tree. They like to rock their dolls and sing to them. Sue has a bell on the neck of her pet cat.
+                      One hot day Anna, Sue, and Emma sat on the grass in the shade of a big tree. They like to rock their dolls and sing to them. Sue has a bell on the neck of her pet cat.
                       <br />
                       <br />
                       The brave men in our boat are on their way to the ship. They will save the men in the ship, if they can. They will not let them drown.
