Add marking read when using next lesson.

--- a/index.html
+++ b/index.html
@@ -1033,10 +1033,12 @@
    <br />
    Do you think they can do this in one day?
    </p>
-  <button class="readToMe">Read to Me</button>
-  <button class="readIt">I Read It!</button>
-  <button class="next">Next Lesson</button>
-</div>
+   <div class="afterReading">
+    <button class="readToMe">Read to Me</button>
+    <button class="readIt">I Read It!</button>
+    <button class="next">Next Lesson</button>
+   </div>
+ </div>
 
 <div class="stories" id="story32">
   <h3>
@@ -1050,9 +1052,11 @@
    <br />
   They see men at work and boys at play.
    </p>
-  <button class="readToMe">Read to Me</button>
-  <button class="readIt">I Read It!</button>
-  <button class="next">Next Lesson</button>
+   <div class="afterReading">
+    <button class="readToMe">Read to Me</button>
+    <button class="readIt">I Read It!</button>
+    <button class="next">Next Lesson</button>
+   </div>
  </div>
 
 <div class="stories" id="story33">
@@ -1067,9 +1071,11 @@
    <br />
   The goats love Betsy, for she feeds them, and is kind to them.
    </p>
-  <button class="readToMe">Read to Me</button>
-  <button class="readIt">I Read It!</button>
+   <div class="afterReading">
+    <button class="readToMe">Read to Me</button>
+    <button class="readIt">I Read It!</button>
     <button class="next">Next Lesson</button>
+   </div>
 </div>
 
 <div class="stories" id="story34">
@@ -1084,9 +1090,11 @@
    <br />
    We may yet save the house, if we work hard.
    </p>
-  <button class="readToMe">Read to Me</button>
-  <button class="readIt">I Read It!</button>
-  <button class="next">Next Lesson</button>
+   <div class="afterReading">
+    <button class="readToMe">Read to Me</button>
+    <button class="readIt">I Read It!</button>
+    <button class="next">Next Lesson</button>
+   </div>
 </div>
 
 <div class="stories" id="story35">
@@ -1328,10 +1336,10 @@
     Lesson 45
   </h3>
  <p>
+   One day Ned and I sat on the high hill by the sea, where the tall lighthouse stands. We could look far out and could see the ships at sea.
+   <br />
+   <br />
    As we sat there, we saw a man nearby, with some sheep and lambs. The man had a pipe in his mouth. He sat with us, and let the sheep eat the grass.
-   <br />
-   <br />
-   What fun it is to see lambs play! It made us laugh to see them.
    <br />
    <br />
    What fun it is to see lambs play! It made us laugh to see them.
