Work on Centering Buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <!--<a href="index.html">-->
-        <button id="unorderedList">Lesson List</button>
+        <button id="unorderedList">Lessons</button>
       <!--</a>-->
       <div class=logo>
         <!--
@@ -35,7 +35,7 @@
 
 <div class=directions>
       <p>
-        Choose your lesson from the lesson list. Click on the Lesson List button any time to get the list. It will show you which lessons you've clicked on. If you know the word, say it out loud. Then click on the word to hear it. When you know all the words, click on the Read the Story button.
+        Choose your lesson from the lesson list. Click on the Lessons button any time to get the list. It will show you which lessons you've clicked on. If you know the word, say it out loud. Then click on the word to hear it. When you know all the words, click on the Read the Story button.
       </p>
        </br>
       <p>
