Git rid of outside links.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <title>McGuffey Primer</title>
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Fauna+One|Playfair+Display" rel="stylesheet">
+    <link href="./resources/css/font.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -216,7 +215,7 @@
          <div class="column">
          <div id='page'></div>
          <div class="check">
-           <i id="yes" style="color:green;" class="fa fa-check fa-5x"></i>
+           <img id="yes" src="./resources/images/dark-green-check-mark-md.png" />
          </div> <!--closes check-->
        </div> <!--closes column-->
 
@@ -1547,10 +1546,7 @@
 </div>
 <!--end of stories-->
 
-           <script
-             src="https://code.jquery.com/jquery-3.1.1.min.js"
-             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-             crossorigin="anonymous"></script>
+           <script type="text/javascript" src="./resources/js/jquery.js"></script>
             <script type="text/javascript" src="./resources/js/script.js"></script>
 
          </body>
