Fix some stories.

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
          </h3>
          <img src="./resources/images/lesson6.jpg" />
         <p>
-          Has the lad a dog?
+          Dan has a dog.
           <br />
           <br />
           The lad has a fat dog.
@@ -613,6 +613,18 @@
           <br />
           <br />
           Mary will run and get the eggs.
+          <br />
+          <br />
+          She sees the eggs in the box.
+          <br />
+          <br />
+          Will the fox get the hen?
+          <br />
+          <br />
+          Spot will catch the old fox.
+          <br />
+          <br />
+          The fox will not get the eggs in the nest.
           </p>
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
@@ -1345,7 +1357,7 @@
    As we sat there, we saw a man nearby, with some sheep and lambs. The man had a pipe in his mouth. He sat with us, and let the sheep eat the grass.
    <br />
    <br />
-   What fun it is to see lambs play! It made us laugh to see them.
+   What fun it is to see the lambs play! It made us laugh to see them.
    <br />
    <br />
    The man said that once, when the sheep and lambs were out in the snow, an old wolf took one of the lambs, and ran off with it.
