Change story5 five.

--- a/index.html
+++ b/index.html
@@ -335,19 +335,19 @@
           A rat ran at Dan.
         </br>
         </br>
-          Can Anna fan the man and the lad?
+          The man has a hat.
         </br>
         </br>
-          The man has a cap.
+          The lad has a cap.
         </br>
         </br>
-          The lad has a fan.
-        </br>
-        </br>
-          Has Anna a hat?
+          Anna has a hat.
         </br>
         </br>
           Anna has a hat and a fan.
+        </br>
+        </br>
+          Anna can fan.
                   </p>
                   <div class="afterReading">
                    <button class="readToMe">Read to Me</button>
@@ -514,7 +514,7 @@
           She has eggs in the nest.
           <br />
           <br />
-          A cat sees the nest, and can get the eggs.
+          A cat sees the nest and can get the eggs.
           </p>
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
@@ -556,7 +556,7 @@
           I see ducks on the pond.
           <br />
           <br />
-          Emma sees the ducks, and will feed them.
+          Emma sees the ducks and will feed them.
           <br />
           <br />
           She can not get the ducks.
