--- a/index.html
+++ b/index.html
@@ -1559,7 +1559,7 @@
 <!--end of stories-->
 
            <script type="text/javascript" src="./resources/js/jquery.js"></script>
-            <script type="text/javascript" src="./resources/js/script.js"></script>
+            <script type="text/javascript" src="./resources/js/newscript.js"></script>
 
          </body>
        </html>
