--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div class=directions>
       <p>
-        Choose your lesson from the lesson list. Click on the Lessons button any time to get the list. It will show you which lessons you've clicked on. If you know the word, say it out loud. Then click on the word to hear it. When you know all the words, click on the Read the Story button.
+        Choose your lesson from the lesson list. Click on the Lessons button any time to get the list. It will show you which lessons you've already clicked on. When the lesson opens, read the word if you are able and say it out loud. Then click on the word to hear it. When you know all the words, click on the "Read the Story" button.
       </p>
        </br>
       <p>
@@ -45,9 +45,6 @@
         I have made some slight edits to the McGuffey Primer, mostly to modernize it, just a little. Instead of liking to watch the boys at play, the girls like to play too! Several names have changed as well. The name Ann changed to Anna, not to modernize it, but just because it's hard for little ones to say and hear the difference between "and" and Ann.
        </p>
        </br>
-      <p>
-        Make sure to close these directions!
-       </p>
        </br>
       <p id="closeDirections">CLOSE</p>
     </div>
