--- a/index.html
+++ b/index.html
@@ -33,19 +33,22 @@
     </div>
 
 <div class=directions>
-      <p>
-        Choose your lesson from the lesson list. Click on the Lessons button any time to get the list. It will show you which lessons you've already clicked on. When the lesson opens, read the word if you are able and say it out loud. Then click on the word to hear it. When you know all the words, click on the "Read the Story" button.
-      </p>
-       </br>
-      <p>
-        The lesson shows each word one time and then shows the words randomly. That means sometimes the same word will show up again. After a set number of times based on the number of words in the lesson, a check mark will appear and you can end that part of the exercise if you are ready. It will then show the words beginning with a capital letter and will talk about each word, often using it in a sentence for clarity. Before attempting the story, it is useful to practice the words a few times throughout the day. Having a routine such as looking at the words at breakfast, lunch, and dinner will help form a good habit for learning the words.
-       </p>
-     </br>
-      <p>
-        I have made some slight edits to the McGuffey Primer, mostly to modernize it, just a little. Instead of liking to watch the boys at play, the girls like to play too! Several names have changed as well. The name Ann changed to Anna, not to modernize it, but just because it's hard for little ones to say and hear the difference between "and" and Ann.
-       </p>
-       </br>
-       </br>
+  <p>
+    Choose your lesson from the lesson list. Click on the Lessons button any time to get the list. It will show you which lessons you've already clicked on. They will appear white. Click <span id="reset">RESET</span> to start fresh.
+  </p>
+  </br>
+    <p>When the lesson opens, read the word if you are able and say it out loud. Then click on the word to hear it. When you know all the words, click on the "Read the Story" button.
+  </p>
+   </br>
+  <p>
+    The lesson shows each word one time and then shows the words randomly. That means sometimes the same word will show up again. After a set number of times based on the number of words in the lesson, a check mark will appear and you can end that part of the exercise if you are ready. It will then show the words beginning with a capital letter and will talk about each word, often using it in a sentence for clarity. Before attempting the story, it is useful to practice the words a few times throughout the day. Having a routine such as looking at the words at breakfast, lunch, and dinner will help form a good habit for learning the words.
+   </p>
+ </br>
+  <p>
+    I have made some slight edits to the McGuffey Primer, mostly to modernize it, just a little. Instead of liking to watch the boys at play, the girls like to play too! Several names have changed as well. The name Ann changed to Anna, not to modernize it, but just because it's hard for little ones to say and hear the difference between "and" and Ann.
+   </p>
+   </br>
+   </br>
       <p id="closeDirections">CLOSE</p>
     </div>
 
