--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="./resources/css/reset.css" type="text/css" rel="stylesheet" />
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
     <link href="./resources/css/font.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:300|Quicksand:300|Raleway:300" rel="stylesheet">
     <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
