Take off notice of app.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <button id="directions">Directions</button>
     </header>
-    <h3 style="text-align:center;">Now available as an offline app! Search for EP McGuffey Primer in the Play Store!</h3>
+  <!--  <h3 style="text-align:center;">Now available as an offline app! Search for EP McGuffey Primer in the Play Store!</h3>-->
 
     <div id="readButton">
       <button>Read the Story</button>
