Change Nat to Dan.

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         The mat is on the stand.
         <br />
         <br />
-        The lamp is Nat’s, and the mat is Anna’s.
+        The lamp is Dan’s, and the mat is Anna’s.
           </p>
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
