Add period after cap in lesson 4. Add close button to directions.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     </div>
 
 <div class=directions>
+  <p class="closeDirections">CLOSE</p>
+  </br>
+  </br> 
   <p>
     Choose your lesson from the lesson list. Click on the Lessons button any time to get the list. It will show you which lessons you've already clicked on. They will appear white. Click <span id="reset">RESET</span> to start fresh.
   </p>
@@ -51,7 +54,7 @@
    </p>
    </br>
    </br>
-      <p id="closeDirections">CLOSE</p>
+      <p class="closeDirections">CLOSE</p>
     </div>
 
 <ul id=lessonList>
@@ -311,7 +314,7 @@
         The man has a hat.
         <br />
         <br />
-        The lad has a cap
+        The lad has a cap.
           </p>
           <div class="afterReading">
            <button class="readToMe">Read to Me</button>
